syntax = "proto3";

package go.kit;

option go_package = "github.com/x64fun/terra/pkg/protofile/kit";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
    StructTag tag = 82295501;
}

message StructTag {
    string name = 1;
    bool omitempty = 2;
}
